--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>News Dashboard - 뉴스 트렌드 & 감성 분석</title>
-    <meta name="description" content="키워드 기반 뉴스 트렌드 분석과 감성 분석 대시보드. 실시간으로 뉴스 데이터의 언급 빈도와 긍정/부정 비율을 확인하세요." />
-    <meta name="author" content="News Dashboard" />
+    <title>뉴스 대시보드 - 키워드 트렌드 & 감성 분석</title>
+    <meta name="description" content="뉴스 키워드 트렌드와 감성 분석을 한눈에 확인할 수 있는 대시보드" />
+    <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="News Dashboard - 뉴스 트렌드 & 감성 분석" />
-    <meta property="og:description" content="키워드 기반 뉴스 트렌드 분석과 감성 분석 대시보드" />
+    <meta property="og:title" content="뉴스 대시보드" />
+    <meta property="og:description" content="뉴스 키워드 트렌드와 감성 분석 대시보드" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
@@ -17,7 +17,7 @@
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
-  <body class="dark">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
